RESOLVED FIXED 80080
WebKit compiled by gcc (Xcode 3.2.6) hangs while running DOM/Accessors.html
https://bugs.webkit.org/show_bug.cgi?id=80080
Summary WebKit compiled by gcc (Xcode 3.2.6) hangs while running DOM/Accessors.html
Ryosuke Niwa
Reported 2012-03-01 18:48:11 PST
I attempted a fix in http://trac.webkit.org/changeset/109478 but it had to be reverted due to a build failure: http://trac.webkit.org/changeset/109481 Not sure what the right fix is here.
Attachments
My desparate attempt to fix JSC (3.55 KB, patch)
2012-03-09 15:19 PST, Ryosuke Niwa
fpizlo: review+
Filip Pizlo
Comment 1 2012-03-01 18:50:18 PST
(In reply to comment #0) > I attempted a fix in http://trac.webkit.org/changeset/109478 but it had to be reverted due to a build failure: http://trac.webkit.org/changeset/109481 > > Not sure what the right fix is here. The build failure is due to the fact that on 32-bit, uintptr_t and unsigned might be the same type. Well, they're always compatible in type in the sense that unsigned and uintptr_t will both be 32-bit but there's an open question as to whether uintptr_t is "unsigned int" or "unsigned long". The most robust solution is to rename the two weakCompareAndSwaps to: weakCompareAndSwapUnsigned(...) and: weakCompareAndSwapPointer(...) Then there won't be problems.
Ryosuke Niwa
Comment 2 2012-03-09 15:19:51 PST
Created attachment 131123 [details] My desparate attempt to fix JSC
Filip Pizlo
Comment 3 2012-03-09 15:21:13 PST
Comment on attachment 131123 [details] My desparate attempt to fix JSC I like this approach - this side-steps all manner of C++ overload strangeness due to the plethora of ways that uintptr_t can be typedef'd. R=me.
Ryosuke Niwa
Comment 4 2012-03-09 15:25:27 PST
Note You need to log in before you can comment on or make changes to this bug.