WebKit compiled by gcc (Xcode 3.2.6) hangs while running DOM/Accessors.html https://bugs.webkit.org/show_bug.cgi?id=80080

Reviewed by Filip Pizlo.

* bytecode/SamplingTool.cpp:
(JSC::SamplingRegion::Locker::Locker):
(JSC::SamplingRegion::Locker::~Locker):
* bytecode/SamplingTool.h:
(JSC::SamplingRegion::exchangeCurrent):
* wtf/Atomics.h:
(WTF):
(WTF::weakCompareAndSwap):
(WTF::weakCompareAndSwapUIntPtr):


Canonical link: https://commits.webkit.org/97934@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110342 268f45cc-cd09-0410-ab3c-d52691b4dbfc